--- a/index.html
+++ b/index.html
@@ -110,8 +110,15 @@
         <!-- Search Form -->
         <form id="search">
           <!-- TODO - create the search form -->
-          <input type="text" placeholder="1750 Finch Ave E, North York, ON, CA" name="searchText" id="searchTextBar">
-          <button type="submit" id="submitButton"><i class="fas fa-search"></i> Search</button>
+          <input
+            type="text"
+            placeholder="1750 Finch Ave E, North York, ON, CA"
+            name="searchText"
+            id="searchTextBar"
+          />
+          <button type="submit" id="submitButton">
+            <i class="fas fa-search"></i> Search
+          </button>
         </form>
         <!-- Leaflet Map will get drawn within this div element -->
         <div id="map" class="loading">
