--- a/add-observation.html
+++ b/add-observation.html
@@ -93,7 +93,7 @@
             <fieldset>
               <legend>Photo</legend>
 
-              <label for="pName">Photographer Name<br>
+              <label for="pName">Photographer Name</label><br>
               <input type="text" name="pName" id="pName" placeholder="Karen Shu" maxlength="100" size="65">
 
               <label for="pEmail">Photographer Email</label><br>
